--- a/asset/scss/bootstrap/_bootstrap-reboot.scss
+++ b/asset/scss/bootstrap/_bootstrap-reboot.scss
@@ -4,6 +4,8 @@
 
 @import "custom";
 @import "variables";
-@import "mixins";
+@import "mixins/hover";
+@import "mixins/tab-focus";
 
+@import "normalize";
 @import "reboot";
