--- a/asset/scss/bootstrap/_mixins.scss
+++ b/asset/scss/bootstrap/_mixins.scss
@@ -10,11 +10,7 @@
 
 @mixin transition($transition...) {
   @if $enable-transitions {
-    @if length($transition) == 0 {
-      transition: $transition-base;
-    } @else {
-      transition: $transition;
-    }
+    transition: $transition;
   }
 }
 
@@ -23,15 +19,15 @@
 @import "mixins/hover";
 @import "mixins/image";
 @import "mixins/badge";
+@import "mixins/reset-filter";
 @import "mixins/resize";
 @import "mixins/screen-reader";
 @import "mixins/size";
+@import "mixins/tab-focus";
 @import "mixins/reset-text";
 @import "mixins/text-emphasis";
 @import "mixins/text-hide";
 @import "mixins/text-truncate";
-@import "mixins/transforms";
-@import "mixins/visibility";
 
 // // Components
 @import "mixins/alert";
@@ -42,6 +38,7 @@
 @import "mixins/list-group";
 @import "mixins/nav-divider";
 @import "mixins/forms";
+@import "mixins/progress";
 @import "mixins/table-row";
 
 // // Skins
