--- a/asset/scss/bootstrap/_bootstrap.scss
+++ b/asset/scss/bootstrap/_bootstrap.scss
@@ -1,7 +1,7 @@
 /*!
- * Bootstrap v4.0.0-alpha.6 (https://getbootstrap.com)
- * Copyright 2011-2017 The Bootstrap Authors
- * Copyright 2011-2017 Twitter, Inc.
+ * Bootstrap v4.0.0-alpha.5 (https://getbootstrap.com)
+ * Copyright 2011-2016 The Bootstrap Authors
+ * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
@@ -10,6 +10,8 @@
 @import "variables";
 @import "mixins";
 
+// Reset and dependencies
+@import "normalize";
 @import "print";
 
 // Core CSS
@@ -23,7 +25,7 @@
 @import "buttons";
 
 // Components
-@import "transitions";
+@import "animation";
 @import "dropdown";
 @import "button-group";
 @import "input-group";
