--- a/asset/scss/bootstrap/_button-group.scss
+++ b/asset/scss/bootstrap/_button-group.scss
@@ -4,27 +4,28 @@
 .btn-group,
 .btn-group-vertical {
   position: relative;
-  display: inline-flex;
+  display: inline-block;
   vertical-align: middle; // match .btn alignment given font-size hack above
 
   > .btn {
     position: relative;
-    flex: 0 1 auto;
+    float: left;
     margin-bottom: 0;
 
-    // Bring the hover, focused, and "active" buttons to the fron to overlay
-    // the borders properly
-    @include hover {
-      z-index: 2;
-    }
+    // Bring the "active" button to the front
     &:focus,
     &:active,
     &.active {
       z-index: 2;
     }
+    @include hover {
+      z-index: 2;
+    }
   }
+}
 
-  // Prevent double borders when buttons are next to each other
+// Prevent double borders when buttons are next to each other
+.btn-group {
   .btn + .btn,
   .btn + .btn-group,
   .btn-group + .btn,
@@ -35,12 +36,18 @@
 
 // Optional: Group multiple button groups together for a toolbar
 .btn-toolbar {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  margin-left: -$btn-toolbar-margin; // Offset the first child's margin
+  @include clearfix();
 
+  .btn-group,
   .input-group {
-    width: auto;
+    float: left;
+  }
+
+  > .btn,
+  > .btn-group,
+  > .input-group {
+    margin-left: $btn-toolbar-margin;
   }
 }
 
@@ -130,19 +137,43 @@
 }
 
 
+// Reposition the caret
+.btn .caret {
+  margin-left: 0;
+}
+// Carets in other button sizes
+.btn-lg .caret {
+  border-width: $caret-width-lg $caret-width-lg 0;
+  border-bottom-width: 0;
+}
+// Upside down carets for .dropup
+.dropup .btn-lg .caret {
+  border-width: 0 $caret-width-lg $caret-width-lg;
+}
+
+
+
 //
 // Vertical button groups
 //
 
 .btn-group-vertical {
-  display: inline-flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-
-  .btn,
-  .btn-group {
+  > .btn,
+  > .btn-group,
+  > .btn-group > .btn {
+    display: block;
+    float: none;
     width: 100%;
+    max-width: 100%;
+  }
+
+  // Clear floats so dropdown menus can be properly placed
+  > .btn-group {
+    @include clearfix();
+
+    > .btn {
+      float: none;
+    }
   }
 
   > .btn + .btn,
