--- a/asset/scss/bootstrap/_input-group.scss
+++ b/asset/scss/bootstrap/_input-group.scss
@@ -4,33 +4,45 @@
 
 .input-group {
   position: relative;
-  display: flex;
   width: 100%;
+
+  @if $enable-flex {
+    display: flex;
+  } @else {
+    display: table;
+    // Prevent input groups from inheriting border styles from table cells when
+    // placed within a table.
+    border-collapse: separate;
+  }
 
   .form-control {
     // Ensure that the input is always above the *appended* addon button for
     // proper border colors.
     position: relative;
     z-index: 2;
-    flex: 1 1 auto;
-    // Add width 1% and flex-basis auto to ensure that button will not wrap out
-    // the column. Applies to IE Edge+ and Firefox. Chrome does not require this.
-    width: 1%;
-    margin-bottom: 0;
-
     // Bring the "active" form control to the front
     @include hover-focus-active {
       z-index: 3;
     }
+    @if $enable-flex {
+      flex: 1;
+    } @else {
+      // IE9 fubars the placeholder attribute in text inputs and the arrows on
+      // select elements in input groups. To fix it, we float the input. Details:
+      // https://github.com/twbs/bootstrap/issues/11561#issuecomment-28936855
+      float: left;
+      width: 100%;
+    }
+    margin-bottom: 0;
   }
 }
 
 .input-group-addon,
 .input-group-btn,
 .input-group .form-control {
-  // Vertically centers the content of the addons within the input group
-  display: flex;
-  align-items: center;
+  @if not $enable-flex {
+    display: table-cell;
+  }
 
   &:not(:first-child):not(:last-child) {
     @include border-radius(0);
@@ -39,8 +51,12 @@
 
 .input-group-addon,
 .input-group-btn {
+  @if not $enable-flex {
+    width: 1%;
+  }
   white-space: nowrap;
   vertical-align: middle; // Match the inputs
+  color: #999;
 }
 
 
@@ -68,10 +84,10 @@
 .input-group-addon {
   padding: $input-padding-y $input-padding-x;
   margin-bottom: 0; // Allow use of <label> elements by overriding our default margin-bottom
-  font-size: $font-size-base; // Match inputs
-  font-weight: $font-weight-normal;
+  font-size: $font-size-base;
+  font-weight: normal;
   line-height: $input-line-height;
-  color: $input-color;
+  // color: $input-color;
   text-align: center;
   background-color: $input-group-addon-bg;
   border: $input-btn-border-width solid $input-group-addon-border-color;
@@ -143,11 +159,9 @@
   // element above the siblings.
   > .btn {
     position: relative;
-
     + .btn {
       margin-left: (-$input-btn-border-width);
     }
-
     // Bring the "active" button to the front
     @include hover-focus-active {
       z-index: 3;
@@ -165,6 +179,7 @@
     > .btn,
     > .btn-group {
       z-index: 2;
+      // margin-left: -2px;
       margin-left: (-$input-btn-border-width);
       // Because specificity
       @include hover-focus-active {
