--- a/asset/scss/bootstrap/_tables.scss
+++ b/asset/scss/bootstrap/_tables.scss
@@ -6,7 +6,6 @@
   width: 100%;
   max-width: 100%;
   margin-bottom: $spacer;
-  background-color: $table-bg; // Reset for nesting within parents with `background-color`.
 
   th,
   td {
@@ -106,26 +105,26 @@
 
 .thead-inverse {
   th {
-    color: $table-inverse-color;
-    background-color: $table-inverse-bg;
+    color: #fff;
+    background-color: $gray-dark;
   }
 }
 
 .thead-default {
   th {
-    color: $table-head-color;
-    background-color: $table-head-bg;
+    color: $gray;
+    background-color: $gray-lighter;
   }
 }
 
 .table-inverse {
-  color: $table-inverse-color;
-  background-color: $table-inverse-bg;
+  color: $gray-lighter;
+  background-color: $gray-dark;
 
   th,
   td,
   thead th {
-    border-color: $body-bg;
+    border-color: $gray;
   }
 
   &.table-bordered {
@@ -137,18 +136,61 @@
 
 // Responsive tables
 //
-// Add `.table-responsive` to `.table`s and we'll make them mobile friendly by
-// enabling horizontal scrolling. Only applies <768px. Everything above that
+// Wrap your tables in `.table-responsive` and we'll make them mobile friendly
+// by enabling horizontal scrolling. Only applies <768px. Everything above that
 // will display normally.
 
 .table-responsive {
   display: block;
   width: 100%;
+  min-height: 0%; // Workaround for IE9 bug (see https://github.com/twbs/bootstrap/issues/14837)
   overflow-x: auto;
-  -ms-overflow-style: -ms-autohiding-scrollbar; // See https://github.com/twbs/bootstrap/pull/10057
 
-  // Prevent double border on horizontal scroll due to use of `display: block;`
-  &.table-bordered {
-    border: 0;
+  // TODO: find out if we need this still.
+  //
+  // border: $table-border-width solid $table-border-color;
+  // -ms-overflow-style: -ms-autohiding-scrollbar; // See https://github.com/twbs/bootstrap/pull/10057
+}
+
+
+.table-reflow {
+  thead {
+    float: left;
+  }
+
+  tbody {
+    display: block;
+    white-space: nowrap;
+  }
+
+  th,
+  td {
+    border-top: $table-border-width solid $table-border-color;
+    border-left: $table-border-width solid $table-border-color;
+
+    &:last-child {
+      border-right: $table-border-width solid $table-border-color;
+    }
+  }
+
+  thead,
+  tbody,
+  tfoot {
+    &:last-child {
+      tr:last-child th,
+      tr:last-child td {
+        border-bottom: $table-border-width solid $table-border-color;
+      }
+    }
+  }
+
+  tr {
+    float: left;
+
+    th,
+    td {
+      display: block !important;
+      border: $table-border-width solid $table-border-color;
+    }
   }
 }
