--- a/asset/scss/bootstrap/mixins/_list-group.scss
+++ b/asset/scss/bootstrap/mixins/_list-group.scss
@@ -10,15 +10,21 @@
   button.list-group-item-#{$state} {
     color: $color;
 
+    .list-group-item-heading {
+      color: inherit;
+    }
+
     @include hover-focus {
       color: $color;
       background-color: darken($background, 5%);
     }
 
     &.active {
-      color: #fff;
-      background-color: $color;
-      border-color: $color;
+      @include plain-hover-focus {
+        color: #fff;
+        background-color: $color;
+        border-color: $color;
+      }
     }
   }
 }
