--- a/src/transfer/asset/index.scss
+++ b/src/transfer/asset/index.scss
@@ -1,5 +1,6 @@
 .transfer {
     position: relative;
+    overflow: hidden;
 }
 
 .transfer > div,
@@ -66,7 +67,7 @@
 // }
 
 .transfer .list-group .list-group-item {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.2rem 0.5rem 1rem;
     border: none;
 }
 
