--- a/src/upload/asset/index.scss
+++ b/src/upload/asset/index.scss
@@ -48,6 +48,9 @@
     position: absolute;
     top: 8px;
     right: 8px;
+    height: 20px;
+    width: 20px;
+    left: inherit;
 }
 
 .lego-upload .lego-upload-item .media-body .media-heading .right a {
