--- a/src/tables/asset/index.scss
+++ b/src/tables/asset/index.scss
@@ -28,7 +28,7 @@
     transition: background .3s ease;
     text-align: left;
     border-top: 2px #e4eaec solid;
-    border-bottom: 2px #e4eaec solid;
+    border-bottom: 2px #ece4e4 solid;
     border-left: 1px #e4eaec solid;
 }
 
