--- a/example/src/index/asset/index.scss
+++ b/example/src/index/asset/index.scss
@@ -509,7 +509,7 @@ body {
 
 .page-content {
     height: 100%;
-    padding: 15px;
+    padding: 15px 0;
 }
 
 .page-panel-bg {
@@ -517,4 +517,13 @@ body {
     background-color: #fff;
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+#pageContent{
+    height: 100%;
+}
+.col-right{
+    border: 1px solid rgb(221, 221, 221);
+    border-radius: 4px;
+    padding: 15px;
+    height: 100%;
 }
