--- a/src/tables/asset/index.scss
+++ b/src/tables/asset/index.scss
@@ -27,9 +27,9 @@
     -webkit-transition: background .3s ease;
     transition: background .3s ease;
     text-align: left;
-    border-top: 2px #e4eaec solid;
+    border-top: 2px #ece4e4 solid;
     border-bottom: 2px #ece4e4 solid;
-    border-left: 1px #e4eaec solid;
+    border-left: 1px #ece4e4 solid;
 }
 
 .lego-table-thead > tr > th:first-child {
