--- a/asset/scss/_fonts.scss
+++ b/asset/scss/_fonts.scss
@@ -2,5 +2,5 @@
 // @import "fonts/themify";
 @import "fonts/anticon";
 @import "fonts/glyphicons";
-@import "fonts/iconfont";
-@import "fonts/hbyicon";
+// @import "fonts/iconfont";
+// @import "fonts/hbyicon";
