--- a/src/search/asset/index.scss
+++ b/src/search/asset/index.scss
@@ -43,6 +43,9 @@
     border-right: none;
 }
 
+.lego-search .input-group-btn{
+    width: 1% !important;
+}
 .lego-search.input-group .lego-search-input:active,
 .input-group .lego-search-input:focus,
 .input-group .lego-search-input:hover {
