--- a/src/selects/asset/index.scss
+++ b/src/selects/asset/index.scss
@@ -16,6 +16,15 @@
     border-top: 0.3em solid;
     border-right: 0.3em solid transparent;
     border-left: 0.3em solid transparent;
+
+    // font-family: 'anticon';
+    // position: absolute;
+    // top: 50%;
+    // right: 18px;
+    // display: inline-block;
+    // margin-top: -9px;
+    // zoom: 0.5;
+    // content: "\E61D";
 }
 .select .dropdown-menu {
     position: absolute !important;
