--- a/src/tree/asset/index.scss
+++ b/src/tree/asset/index.scss
@@ -134,7 +134,7 @@
     content: "\f07b";
 }
 .lego-tree li span.button.chk {
-    font-family: 'anticon';
+    // font-family: 'anticon';
     // width: 13px;
     height: 25px;
     margin: 2px 2px 0 3px;
@@ -148,15 +148,16 @@
 /*.lego-tree li span.button.chk.checkbox_false_disable:before*/
 
 {
-    // content: "\ea53";
-    content: "";
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    margin-top: 4px;
-    margin-right: 1px;
-    border: 1px solid #ccc;
-    border-radius: 2px;
+    content: "\f096";
+    font-size: 18px;
+    // content: "";
+    // display: inline-block;
+    // width: 16px;
+    // height: 16px;
+    // margin-top: 4px;
+    // margin-right: 1px;
+    // border: 1px solid #ccc;
+    // border-radius: 2px;
 }
 
 .lego-tree li span.button.chk.checkbox_true_full:before,
@@ -166,7 +167,7 @@
 /*.lego-tree li span.button.chk.checkbox_true_disable:before */
 
 {
-    content: "\E6C4";
+    content: "\f14a";
     color: #3399fe;
 }
 
@@ -177,14 +178,14 @@
 /*.lego-tree li span.button.chk.radio_false_disable:before*/
 
 {
-    // content: "\ea56";
-    content: "";
-    display: inline-block;
-    width: 17px;
-    height: 17px;
-    margin-top: 4px;
-    border: 1px solid #ccc;
-    border-radius: 50%;
+    content: "\f1db";
+    // content: "";
+    // display: inline-block;
+    // width: 17px;
+    // height: 17px;
+    // margin-top: 4px;
+    // border: 1px solid #ccc;
+    // border-radius: 50%;
 }
 
 .lego-tree li span.button.chk.radio_true_full:before,
@@ -194,7 +195,7 @@
 /*.lego-tree li span.button.chk.radio_true_disable:before */
 
 {
-    content: "\E630";
+    content: "\f192";
     color: #3399fe;
 }
 
@@ -211,7 +212,8 @@
 }
 
 .lego-tree li span.button.switch {
-    width: 16px;
+    // width: 16px;
+    min-width: 13px;
     height: 25px;
     // margin-top: 1px;
     // -webkit-transform: scale(0.55);
@@ -234,13 +236,14 @@
     display: inline-block;
     width: 0;
     height: 0;
-    margin-top: -.1em;
+    margin-top: -.2em;
     margin-left: .4em;
     vertical-align: middle;
     content: "";
     border-top: 0.5em solid;
     border-right: 0.3em solid transparent;
     border-left: 0.3em solid transparent;
+    margin-right: .1em;
 }
 
 .lego-tree li span.button.center_close:before,
@@ -257,7 +260,7 @@
     display: inline-block;
     width: 0;
     height: 0;
-    margin-top: -.1em;
+    margin-top: -.2em;
     margin-left: .6em;
     vertical-align: middle;
     content: "";
