--- a/src/tags/asset/index.scss
+++ b/src/tags/asset/index.scss
@@ -1,22 +1,58 @@
+@import "../../../asset/scss/bootstrap/variables";
 .lego-tags {
-}
-.lego-tag {
-    display: inline-block;
-    line-height: 20px;
-    height: 22px;
-    padding: 0 8px;
-    border-radius: 4px;
-    border: 1px solid #e9e9e9;
-    background: #f7f7f7;
-    font-size: 12px;
-    -webkit-transition: all .3s cubic-bezier(.78,.14,.15,.86);
-    transition: all .3s cubic-bezier(.78,.14,.15,.86);
-    opacity: 1;
-    margin-right: 8px;
-    margin-bottom: 8px;
-    cursor: pointer;
-    white-space: nowrap;
-}
-.lego-tag-hascolor{
-    color: #fff;
+    .lego-tag {
+        display: inline-block;
+        line-height: 20px;
+        height: 22px;
+        padding: 0 10px;
+        border-radius: 4px;
+        border: 1px solid #e9e9e9;
+        background: #f7f7f7;
+        font-size: 12px;
+        -webkit-transition: all .3s cubic-bezier(.78,.14,.15,.86);
+        transition: all .3s cubic-bezier(.78,.14,.15,.86);
+        opacity: 1;
+        margin-right: 8px;
+        margin-bottom: 4px;
+        cursor: pointer;
+        white-space: nowrap;
+    }
+    button{
+        margin-bottom: 4px;
+    }
+    .lego-tag-hascolor{
+        color: #fff;
+    }
+    .lego-tag-text{
+        -webkit-transition: all .3s cubic-bezier(.645,.045,.355,1);
+        transition: all .3s cubic-bezier(.645,.045,.355,1);
+        .lego-tag-close{
+            overflow: hidden;
+            zoom: 1;
+            width: 0;
+            line-height: 20px;
+            vertical-align: bottom;
+            color: #999;
+            -webkit-transition: all .3s cubic-bezier(.645,.045,.355,1);
+            transition: all .3s cubic-bezier(.645,.045,.355,1);
+            -webkit-transform: scale(.75) rotate(0deg);
+            -ms-transform: scale(.75) rotate(0deg);
+            transform: scale(.75) rotate(0deg);
+            -webkit-transform-origin: 100% 50%;
+            -ms-transform-origin: 100% 50%;
+            transform-origin: 100% 50%;
+            &:hover{
+                color: $red;
+            }
+        }
+        &:hover{
+            margin-left: -8px;
+            margin-right: -8px;
+            .lego-tag-close{
+                width: 16px;
+                -webkit-transform: translateZ(0);
+                transform: translateZ(0);
+            }
+        }
+    }
 }
