--- a/src/editcom/asset/index.scss
+++ b/src/editcom/asset/index.scss
@@ -15,6 +15,9 @@
     // line-height: 36px;
     margin-left: 5px;
 }
+.lego-editcom > span{
+	padding-top: .3rem;
+}
 .lego-editcom.sm > i{
     line-height: 25px;
 }
