--- a/src/upload/asset/index.scss
+++ b/src/upload/asset/index.scss
@@ -1,95 +1,102 @@
-.lego-upload .lego-upload-container {
-    margin-top: 8px;
-}
-
-.lego-upload .lego-addbtn i {
-    font-size: 16px;
-    display: inline-block;
-}
-
-.lego-upload .lego-cancelbtn {
-    zoom: 0.8;
-}
-
-.lego-upload .lego-closebtn {
-    zoom: 0.8;
-    display: none;
-}
-
-.lego-upload .lego-upload-item {
-    position: relative;
-    padding: 8px;
-    border-radius: 3px;
-    margin-top: 8px;
-    border: 1px #ddd solid;
-    // border-bottom-color: #ddd;
-}
-
-.lego-upload .lego-upload-item:hover {
-    // background-color: #ececec;
-    border-color: #c5c5c5;
-}
-
-.lego-upload .lego-upload-item .media-left i {
-    font-size: 40px;
-    color: #f90;
-}
-
-.lego-upload .lego-upload-item .media-body .media-heading {
-    margin-right: 40px;
-    font-size: 14px;
-    font-weight: normal;
-    margin-bottom: 8px;
-    word-wrap: break-word;
-    word-break: break-all;
-}
-
-.lego-upload .lego-upload-item .media-body .media-heading .right {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    height: 20px;
-    width: 20px;
-    left: inherit;
-}
-
-.lego-upload .lego-upload-item .media-body .media-heading .right a {
-    margin-left: 8px;
-}
-
-.lego-upload .lego-upload-item .media-body small {
-    margin-top: 8px;
-    color: #999;
-}
-
-.lego-upload .lego-upload-item .media-body small cite {
-    font-style: inherit;
-}
-
-.lego-upload .lego-upload-item .media-body small time {
-    display: none;
-    margin-left: 15px;
-}
-
-.lego-upload .lego-upload-item .media-body small time a {
-    margin-left: 5px;
-}
-
-.lego-upload .lego-upload-item .media-body .progress {
-    margin-bottom: 0;
-    margin-top: 15px;
-    height: 3px;
-    background-color: #ececec;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-.lego-upload .lego-upload-item .media-body .progress-bar {
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-.lego-upload .lego-upload-item:hover .lego-closebtn,
-.lego-upload .lego-upload-item:hover small time {
-    display: inline-block;
+.lego-upload {
+    .lego-upload-container {
+        margin-top: 8px;
+    }
+    .lego-addbtn{
+        i {
+            font-size: 16px;
+            display: inline-block;
+        }
+    }
+    .lego-cancelbtn {
+        zoom: 0.8;
+    }
+    .lego-closebtn {
+        zoom: 0.8;
+        display: none;
+    }
+    .lego-upload-item {
+        position: relative;
+        padding: 8px;
+        border-radius: 3px;
+        margin-top: 8px;
+        border: 1px #ddd solid;
+        // border-bottom-color: #ddd;
+        &:hover {
+            // background-color: #ececec;
+            border-color: #c5c5c5;
+        }
+        .media-left{
+            i {
+                font-size: 40px;
+                color: #f90;
+            }
+        }
+        .media-body{
+            .media-heading {
+                margin-right: 40px;
+                font-size: 14px;
+                font-weight: normal;
+                margin-bottom: 8px;
+                word-wrap: break-word;
+                word-break: break-all;
+                .right {
+                    position: absolute;
+                    top: 8px;
+                    right: 8px;
+                    height: 20px;
+                    width: 20px;
+                    left: inherit;
+                    a {
+                        margin-left: 8px;
+                    }
+                }
+            }
+            small {
+                margin-top: 8px;
+                color: #999;
+                cite {
+                    font-style: inherit;
+                }
+                time {
+                    display: none;
+                    margin-left: 15px;
+                    a {
+                        margin-left: 5px;
+                    }
+                }
+            }
+            .progress {
+                margin-bottom: 0;
+                margin-top: 15px;
+                height: 3px;
+                background-color: #ececec;
+                -webkit-box-shadow: none;
+                box-shadow: none;
+            }
+            .progress-bar {
+                -webkit-box-shadow: none;
+                box-shadow: none;
+            }
+        }
+        &:hover .lego-closebtn,
+        &:hover small time {
+            display: inline-block;
+        }
+    }
+    &.lego-upload-avatar{
+        .lego-upload-add{
+            display: inline-block;
+            border: 1px dashed #d9d9d9;
+            border-radius: 6px;
+            cursor: pointer;
+            text-align: center;
+            .avatar-uploader-trigger {
+                display: table-cell;
+                vertical-align: middle;
+                font-size: 28px;
+                color: #999;
+            }
+        }
+    }
 }
