--- a/src/upload/asset/index.scss
+++ b/src/upload/asset/index.scss
@@ -1,3 +1,4 @@
+@import "../../../asset/scss/bootstrap/variables";
 .lego-upload {
     .lego-upload-container {
         margin-top: 8px;
@@ -10,10 +11,18 @@
     }
     .lego-cancelbtn {
         zoom: 0.8;
+        color: #ccc;
+        &:hover{
+            color: $brand-danger !important;
+        }
     }
     .lego-closebtn {
         zoom: 0.8;
         display: none;
+        color: #ccc;
+        &:hover{
+            color: $brand-danger !important;
+        }
     }
     .lego-upload-item {
         position: relative;
@@ -66,37 +75,108 @@
                     }
                 }
             }
-            .progress {
-                margin-bottom: 0;
-                margin-top: 15px;
-                height: 3px;
-                background-color: #ececec;
-                -webkit-box-shadow: none;
-                box-shadow: none;
-            }
-            .progress-bar {
-                -webkit-box-shadow: none;
-                box-shadow: none;
-            }
         }
         &:hover .lego-closebtn,
         &:hover small time {
             display: inline-block;
         }
     }
-    &.lego-upload-avatar{
-        .lego-upload-add{
-            display: inline-block;
-            border: 1px dashed #d9d9d9;
-            border-radius: 6px;
-            cursor: pointer;
-            text-align: center;
-            .avatar-uploader-trigger {
-                display: table-cell;
-                vertical-align: middle;
-                font-size: 28px;
-                color: #999;
+    .lego-upload-photo-item {
+        display: inline-block;
+        margin: 0 8px 8px 0;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        position: relative;
+        background-repeat: no-repeat;
+        background-origin: content-box;
+        background-size: cover;
+        background-position: center center;
+        .lego-upload-operate{
+            overflow: hidden;
+            height: 100%;
+            &:before{
+                content: " ";
+                position: absolute;
+                background-color: rgba(0,0,0,.6);
+                -webkit-transition: all .3s;
+                transition: all .3s;
+                width: 100%;
+                height: 100%;
+                border-radius: 4px;
+                opacity: 0;
+            }
+            .progress{
+                margin-top: 0;
+            }
+            .lego-upload-btns{
+                width: 100%;
+                text-align: center;
+                position: absolute;
+                top: 50%;
+                margin-top: -15px;
+                display: none;
+                a {
+                    display: inline-block;
+                    color: #ccc;
+                    i {
+                        font-size: 20px;
+                        width: 16px;
+                        margin: 0 4px;
+                    }
+                    &:hover{
+                        color: $brand-primary;
+                    }
+                }
+            }
+            .lego-cancelbtn {
+                top: 8px;
+                right: 3px;
+                position: absolute;
             }
         }
+        &:hover{
+            .lego-upload-operate{
+                &:before{
+                    opacity: 1;
+                }
+                .lego-upload-btns{
+                    display: block;
+                }
+            }
+        }
+    }
+    .lego-upload-add{
+        margin-top: 0;
+        display: inline-block;
+        border: 1px dashed #ccc;
+        border-radius: 4px;
+        cursor: pointer;
+        text-align: center;
+        -webkit-transition: border-color .3s ease;
+        transition: border-color .3s ease;
+        background-color: #fbfbfb;
+        margin: 0 8px 8px 0;
+        vertical-align: bottom;
+        .avatar-uploader-trigger {
+            display: table-cell;
+            vertical-align: middle;
+            font-size: 28px;
+            color: #ccc;
+        }
+        &:hover{
+            border-color: $brand-primary;
+        }
+    }
+    .progress {
+        margin-bottom: 0;
+        margin-top: 15px;
+        height: 3px;
+        background-color: #ececec;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+    .progress-bar {
+        -webkit-box-shadow: none;
+        box-shadow: none;
     }
 }
